Sculpt Mode crash when using Relax Mesh Filter with Dyntopo enabled #72054

Closed
opened 2019-11-29 23:39:59 +01:00 by Diego Verger · 9 comments

System Information
Operating system: Ubuntu 19.10
Graphics card: GeForce GTX 460

Blender Version
Broken: 77c7440540

Short description of error
Blender will crash if you use the Relax filter while dyntopo is still enabled.
None of the other filter types triggers the crash.
Any mesh type appears to trigger the crash.

Exact steps for others to reproduce the error

  1. Switch to Sculpt mode with the default cube selected
  2. Enable Dyntopo
  3. Select Mesh Filter
  4. Switch filter type to Relax
  5. Click and drag over the viewport

Sculpt mode is getting awesome, thank you.

**System Information** Operating system: Ubuntu 19.10 Graphics card: GeForce GTX 460 **Blender Version** Broken: 77c744054062 **Short description of error** Blender will crash if you use the Relax filter while dyntopo is still enabled. None of the other filter types triggers the crash. Any mesh type appears to trigger the crash. **Exact steps for others to reproduce the error** 1. Switch to **Sculpt mode** with the default cube selected 2. Enable **Dyntopo** 3. Select **Mesh Filter** 4. Switch filter type to **Relax** 5. Click and drag over the viewport Sculpt mode is getting awesome, thank you.
Author

Added subscriber: @Diego3D

Added subscriber: @Diego3D

Added subscriber: @Regnas

Added subscriber: @Regnas

Confirmed on Windows too.

Confirmed on Windows too.

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce this as well. in is NULL when calling normal_short_to_float_v3(float out- [x], const short in- [x]). The following stack trace is for f478fef9d6

normal_short_to_float_v3(float * out, const short * in) Line 1161
sculpt_relax_vertex(SculptSession * ss, PBVHVertexIter * vd, float factor, float * r_final_pos) Line 3076
mesh_filter_task_cb(void * userdata, const int i, const TaskParallelTLS * UNUSED_tls) Line 8897
BKE_pbvh_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const PBVHParallelSettings * settings) Line 147
sculpt_mesh_filter_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 8961
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2945
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2993
wm_event_do_handlers(bContext * C) Line 3372
WM_main(bContext * C) Line 420
main(int argc, const unsigned char * * UNUSED_argv_c) Line 498
I can reproduce this as well. `in` is NULL when calling `normal_short_to_float_v3(float out- [x], const short in- [x])`. The following stack trace is for f478fef9d6 ``` normal_short_to_float_v3(float * out, const short * in) Line 1161 sculpt_relax_vertex(SculptSession * ss, PBVHVertexIter * vd, float factor, float * r_final_pos) Line 3076 mesh_filter_task_cb(void * userdata, const int i, const TaskParallelTLS * UNUSED_tls) Line 8897 BKE_pbvh_parallel_range(const int start, const int stop, void * userdata, void(*)(void *, const int, const TaskParallelTLS *) func, const PBVHParallelSettings * settings) Line 147 sculpt_mesh_filter_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 8961 wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192 wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2945 wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2993 wm_event_do_handlers(bContext * C) Line 3372 WM_main(bContext * C) Line 420 main(int argc, const unsigned char * * UNUSED_argv_c) Line 498 ```

This issue was referenced by 8a7851de3a

This issue was referenced by 8a7851de3a0bbddab7875a6b99bd55d9298d9e9c
Author

I found another issue that seems related.

Topology brush crashes Blender when holding SHIFT key while Dyntopo is enabled
Blender Version f1ac64921b

Steps:

  1. Enable Dyntopo and select the Topology brush
  2. Hold down the SHIFT key and click on the mesh

I don know if Pablo's patch will fix this too. Sorry I'm not a developer, I add it here so you can check. Thank you.

I found another issue that seems related. **Topology brush crashes Blender when holding SHIFT key while Dyntopo is enabled** Blender Version f1ac64921b49 **Steps:** 1. Enable Dyntopo and select the Topology brush 2. Hold down the SHIFT key and click on the mesh I don know if Pablo's patch will fix this too. Sorry I'm not a developer, I add it here so you can check. Thank you.

@Diego3D The patch seems to fix that issue as well.

@Diego3D The patch seems to fix that issue as well.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro self-assigned this 2019-12-09 16:56:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72054
No description provided.